--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "downloadjs": "^1.4.7",
     "vue": "^2.5.2",
     "vue-analytics": "^5.16.0",
+    "vue-loading-spinner": "^1.0.11",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
